# medical-appointment-app

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml  spec.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 758d895c43c0_add_daily_llm_usage.py  89509bb2d1ed_add_patient_and_clinical_notes_name_.py  8b8047f1b51b_add_waitlist_follow_ups_feature_flags_.py  9133db2c73a5_add_reviews_reminder_logs_and_audit_logs.py  c0c03e55fdd2_initial_schema.py  c33ae8bc0b01_add_account_deletion_columns.py  c4c5244fcda1_add_agent_sessions_and_messages.py  d6efdef23ede_add_medical_history_notification_.py  fd1b4822fbf2_add_booking_pending_at_for_funnel_.py
backend/app/: main.py
backend/app/agents/: booking_agent.py  context.py  faq_agent.py  reschedule_agent.py  (+4 more)
backend/loadtest/: booking_load_test.js
backend/scripts/: seed_demo.py  seed_taxonomy.py
backend/tests/: conftest.py  test_account_deletion.py  test_admin.py  test_auth.py  test_booking_flow.py  test_cache.py  test_chaos.py  test_concurrency.py  test_data_export.py  test_dead_letter.py  test_doctor_dashboard.py  test_family_accounts.py  test_followup.py  test_health.py  test_hitl_confirmation.py  test_llm_client.py  test_llm_usage_service.py  test_medical_history.py  test_metrics.py  test_notes.py  test_notifications.py  test_reminders.py  test_reviews.py  test_search.py  test_search_n_plus_one.py  test_security.py  test_slots.py  test_sms_fallback.py  test_state_machine.py  test_waitlist.py
(+166 files in other folders)
