[project]
name = "medbook-backend"
version = "0.1.0"
description = "MedBook backend — medical appointment booking platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sentry-sdk>=2.66.0",
    "sqlmodel>=0.0.39",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "faker>=40.31.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
markers = [
    "live_llm: tests that hit a real LLM provider (excluded from CI by default)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
